# vellum

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
agent/: gmail_watch.py  listener.py  mailer.py  packager.py  parser.py  scraper.py  storage.py  summarizer.py
assets/: vellum_brand.html
core/: config.py  logger.py  models.py  queue.py
scripts/: authorize.py  deploy.sh
templates/: email_error.html  email_success.html
tests/: test_listener.py  test_mailer.py  test_parser.py  test_pipeline.py  test_scraper.py
